--- a/front/flutter_application/pubspec.yaml
+++ b/front/flutter_application/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
     http: ^1.2.2
+    provider: ^6.1.2
     shared_preferences: ^2.3.4
+    intl: ^0.20.1
 
 dev_dependencies:
     flutter_test:
